--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -91,6 +91,12 @@
 #BarHolder{
   width: fill-parent-flow(1.0);
   vertical-align: bottom;
+  opacity: 0;
+  
+  transition-property: opacity;
+  transition-duration: 1.0s;
+  transition-timing-function: linear;
+
 }
 
 .VertBar
@@ -168,6 +174,10 @@
   //margin-right: 0px;
   vertical-align: bottom;
   horizontal-align: left;
+
+  transition-property: height;
+  transition-duration: 1.0s;
+  transition-timing-function: linear;
 }
 
 #BarDN
@@ -179,6 +189,10 @@
   //margin-right: 1px;
   vertical-align: bottom;
   horizontal-align: left;
+
+  transition-property: height;
+  transition-duration: 1.0s;
+  transition-timing-function: linear;
 }
 
 
