--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
@@ -101,7 +101,7 @@
 }
 
 .PickButton{
-  width: fill-parent-flow(1.0);
+  width: 100%;
   height: 100%;
 }
 
@@ -113,7 +113,7 @@
   font-size: 15;
   background-color: black;
   
-  width: fill-parent-flow(1.0);
+  width: 100%;
   margin-top: 0px;
   margin-bottom: 60px;
 }
