Add a close button on the top-right corner

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/stats.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/stats.css
@@ -51,6 +51,11 @@
   color: #666666;
 }
 
+.Header .CloseButton{
+  vertical-align: center;
+  horizontal-align: right;
+}
+
 .Category
 {
   flow-children: down;
