Add close and minimiza buttons for the endscreen

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -72,6 +72,18 @@
   color: #666666;
 }
 
+.Header .CloseButton{
+  vertical-align: center;
+  horizontal-align: right;
+}
+
+#cancel_button_top{
+  vertical-align: center;
+  horizontal-align: right;
+  margin-right: 40px;
+  background-image: url("s2r://panorama/images/control_icons/return_to_game_png.vtex");
+}
+
 .Category
 {
   flow-children: down;
