--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -102,13 +102,17 @@
 
 #BarHolder{
   width: fill-parent-flow(1.0);
-  vertical-align: bottom;
   opacity: 0;
+  vertical-align: bottom;
   
   transition-property: opacity;
   transition-duration: 1.0s;
   transition-timing-function: linear;
 
+}
+
+#BarHolder Label{
+  width: 100%;
 }
 
 .VertBar
@@ -128,6 +132,7 @@
 }
 
 #data_container{
+  flow-children: down;
   width : fill-parent-flow(1.0);
   flow-children : down;
   vertical-align : bottom;
@@ -135,17 +140,17 @@
 
 #cs_container{
   flow-children : right;
+  vertical-align: bottom;
 }
 
 .XLeyendPanel{
   flow-children: right;
-  //width: 100%;
   margin-left: 145px;
   margin-right: 10px;
 }
 
 #XLeyendLabel{
-  width: fill-parent-flow(1.0);
+  width: 100%;
   height: 15px;
   text-align: center;
   margin: 0px;
@@ -162,6 +167,7 @@
 }
 
 #LeyendLabel{
+  width: 100%;
   font-size: 15;
   text-align: center;
   vertical-align: middle;
@@ -179,7 +185,7 @@
 
 #BarLH
 {
-  width: fill-parent-flow(1.0);
+  width: 100%;
   height: 0px;
   background-color: gradient( linear, 0% 0%, 0% 100%, from( #003300 ), to( #009933 ) );
   //margin-left: 1px;
@@ -194,7 +200,7 @@
 
 #BarDN
 {
-  width: fill-parent-flow(1.0);
+  width: 100%;
   height: 0px;
   background-color: gradient( linear, 0% 0%, 0% 100%, from( #CC3300 ), to( #800000 ) );
   //margin-left: 0px;
@@ -267,6 +273,7 @@
 
 .Category .RowHeader .RowButton
 {
+  flow-children: right;
   width: fill-parent-flow(1.0);
   margin-bottom: 6px;
   margin-right: 6px;
