--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
@@ -93,7 +93,7 @@
 .PickPanel{
   width: fill-parent-flow(1.0);
   height: 100%;
-  opacity: 0.6;
+  opacity: 0.6;  
 
   transition-property: opacity;
   transition-duration: 0.35s;
@@ -123,8 +123,7 @@
   horizontal-align: center;
 }
 
-.PickPanel:hover{
-  
+.PickPanel:hover{  
   opacity: 1;
 }
 
@@ -137,12 +136,14 @@
 }
 
 .HeroPanel{
-  transition-property: transform;
+  transition-property: transform, desaturation;
   transition-duration: 0.35s;
   transition-timing-function: ease-in-out;
+  saturation: 0.5;
 }
 
 .HeroPanel:hover{
+  saturation: 1;
   transform:  scaleX(1.15) scaleY(1.15);
 }
 
