Possible fix to the overlay help being misplaced on certain resolutions This uses a custom version of https://github.com/Perryvw/PanoramaUtils, thanks!

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/overlay.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/overlay.css
@@ -2,6 +2,11 @@
 @define TimingFunc: linear;
 @define IterationCount: infinite;
 
+.OverlayRoot{
+    width: 100%;
+    height: 100%;
+}
+
 .OverlayPanel{
     width: 100%;
     height: 100%;
