Fix records being uploaded when sv_cheats 1 on local lobbies Add additional Position column to the leaderboard

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/leaderboard.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/leaderboard.css
@@ -95,7 +95,6 @@ DOTAUserName{
 }
 
 .PlayerPanel Label{
-	width: 50%;
 }
 
 .OptionButton
@@ -181,6 +180,14 @@ DOTAUserName{
   	text-transform: uppercase;
   	letter-spacing: 1px;
   	text-align: center;
+}
+
+#header_position{
+  width: 20%;
+}
+
+.Row .row_position{
+  width: 20%;
 }
 
 .LeaderList{
