Add preliminary 1v1 support

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
@@ -170,6 +170,13 @@
 
 }
 
+.PickButton.active
+{
+  border-style: solid;
+  border-width: 10px;
+  border-color: red;
+}
+
 .HeroPanel:hover{
   transform:  scaleX(1.15) scaleY(1.15);
 }
