Set clock panel opaque

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/hud.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/hud.css
@@ -109,7 +109,7 @@
   horizontal-align: center;
   height: 55px;
   width: 200px;
-  background-color: #181818ee;
+  background-color: #181818;
   
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
