--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -409,7 +409,7 @@
     //color: #eeeeee;
 }
 
-.Category .OptionButton:selected
+.ButtonPanel .OptionButton:selected
 {
   background-color: gradient( linear, 0% 0%, 0% 100%, from( #777777 ), to( #999999 ) );
 }
