--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -412,3 +412,10 @@
 {
   background-color: gradient( linear, 0% 0%, 0% 100%, from( #777777 ), to( #999999 ) );
 }
+
+.ChatPanel{
+  vertical-align: bottom;
+  horizontal-align: left;
+  width: 35%;
+  opacity: 0.6;
+}
